--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,8 +1,8 @@
 <div class="row" *ngIf="member">
     <div class="col-4">
         <div class="card">
-            <img src="{{member.photoUrl ||'./assets/user.png'}}" alt ="{{member.knownAs}}"
-            class="card-img-top img-thumbnail">
+            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
+                class="card-img-top img-thumbnail">
             <div class="card-body">
                 <div>
                     <strong>Location:</strong>
@@ -13,41 +13,40 @@
                     <p>{{member.age}}</p>
                 </div>
                 <div>
-                    <strong>Last active:</strong>
-                    <p>{{member.lastActive}}</p>
+                    <strong>Last active:</strong> 
+                    <p>{{member.lastActive + 'Z' | timeago}}</p>
                 </div>
                 <div>
                     <strong>Member since:</strong>
-                    <p>{{member.created}}</p>
+                    <p>{{member.created | date:'dd MMM yyyy'}}</p>
                 </div>
             </div>
             <div class="card-footer">
                 <div class="btn-group d-flex">
                     <button class="btn btn-primary">Like</button>
-                    <button class="btn btn-success">Messages</button>
+                    <button class="btn btn-success">Message</button>
                 </div>
             </div>
         </div>
-
     </div>
     <div class="col-8">
         <tabset class="member-tabset">
             <tab heading="About {{member.knownAs}}">
-            <h4>Description</h4>
-            <p>{{member.introduction}}</p>
-            <h4>Looking for</h4>
-            <p>{{member.lookingFor}}</p>
-        </tab>
-        <tab heading="Interests">
-            <h4>Interests</h4>
-            <p>{{member.interests}}</p>
-        </tab>
-        <tab heading="Photos" #photoTab="tab">
-            <gallery *ngIf="photoTab.active" [items]="images" class="gallery">Photos will go here</gallery>
-        </tab>
-        <tab heading="Messages">
-            <p>Messages will go here</p>
-        </tab>
+                <h4>Description</h4>
+                <p>{{member.introduction}}</p>
+                <h4>Looking for</h4>
+                <p>{{member.lookingFor}}</p>
+            </tab>
+            <tab heading="Interests">
+                <h4>Interests</h4>
+                <p>{{member.interests}}</p>
+            </tab>
+            <tab heading="Photos" #photoTab="tab">
+                <gallery *ngIf="photoTab.active" [items]="images" class="gallery"></gallery>
+            </tab>
+            <tab heading="Messages">
+                <p>Messages will go here</p>
+            </tab>
         </tabset>
     </div>
 </div>
